Fix spacing for mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -1201,7 +1201,7 @@ h1 {
 		}
 		
 				#work #projects .recipe-finder img {
-			margin-top: 18%;
+			margin-top: 20%;
 					width: 90%;
 					height: auto;
 					margin-bottom: 8%;
